fix: previoud design file replace with new files

--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                         <li class="me-3">
                             <a class="link active" href="">About US</a>
                         </li>
+                         <li class="me-3">
+                            <div class="dropdown">
+                            <a class="link dropdown-toggle" type="button" data-bs-toggle="dropdown">Drowpdown <i class="fa-solid fa-chevron-down ms-2"></i></a>
+                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                            </div>
+                        </li>
                     </ul>
                     <div class="ms-4 d-flex align-items-center">
                         <button class="btn btn-custom-primary me-3">
@@ -811,7 +821,7 @@
         </section>
     </main>
     <footer>
-        <div class="container">
+        <div class="container  pb-5 section-padding">
             <div class="row">
                 <div class="col-5">
                     <div class="company-info">
@@ -930,6 +940,13 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="border-top py-3">
+            <div class="container">
+             <p class="copyright">
+                @copyright 2022
+             </p>
+             </div>
         </div>
     </footer>
     <!-- bootsrpa js cdn -->
